--- a/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
@@ -142,15 +142,20 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Bill.cs" />
     <Compile Include="Models\Branch.cs" />
+    <Compile Include="Models\CardPayment.cs" />
+    <Compile Include="Models\CashPayment.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuItem.cs" />
     <Compile Include="Models\MenuSection.cs" />
+    <Compile Include="Models\Notification.cs" />
     <Compile Include="Models\OnlineOrder.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderNotification.cs" />
     <Compile Include="Models\Payment.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Promotion.cs" />
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\Table.cs" />
