--- a/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
@@ -139,7 +139,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Bill.cs" />
     <Compile Include="Models\Branch.cs" />
+    <Compile Include="Models\CashPayment.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
