--- a/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
@@ -140,6 +140,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Branch.cs" />
+    <Compile Include="Models\Payment.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
