--- a/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/RestaurantManagementSystem.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountPagesController.cs" />
     <Compile Include="Controllers\BranchController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RestaurantAPIController.cs" />
@@ -166,10 +167,23 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\main-menu.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\avatar.png" />
+    <Content Include="images\contact.svg" />
+    <Content Include="images\desktop.png" />
+    <Content Include="images\facebook.png" />
+    <Content Include="images\icons8_facebook_48px_4.png" />
+    <Content Include="images\icons8_instagram_48px.png" />
+    <Content Include="images\icons8_shopping_cart_32px.png" />
+    <Content Include="images\icons8_twitter_48px_1.png" />
+    <Content Include="images\icons8_user_50px_1.png" />
+    <Content Include="images\instagram.png" />
+    <Content Include="images\reservation.png" />
+    <Content Include="images\twitter.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -182,6 +196,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\login.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -199,10 +214,12 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Branch\AddBranch.cshtml" />
     <Content Include="Views\Branch\ListOfBranches.cshtml" />
-    <Content Include="Views\AccountPage\Login.cshtml" />
+    <Content Include="Views\AccountPages\Login.cshtml" />
+    <Content Include="Views\AccountPages\CreateAnAccount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
